--- a/examples/ESIA.AspNetIdentityExample/ESIA.AspNetIdentityExample/Web.config
+++ b/examples/ESIA.AspNetIdentityExample/ESIA.AspNetIdentityExample/Web.config
@@ -16,8 +16,8 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-    <add key="EsiaCertFile" value="Path/to/esiacert.cer"/>
-    <add key="AppCertSerial" value="121212123232323244"/>
+    <add key="EsiaCertFile" value="~/Content/esia.cer"/>
+    <add key="AppCertSerial" value="7cf9b04400010003f05d"/>
   </appSettings>
   <system.web>
     <authentication mode="None" />
