добавлен открытый сертификат ESIA

--- a/examples/ESIA.AspNetIdentityExample/ESIA.AspNetIdentityExample/ESIA.AspNetIdentityExample.csproj
+++ b/examples/ESIA.AspNetIdentityExample/ESIA.AspNetIdentityExample/ESIA.AspNetIdentityExample.csproj
@@ -209,6 +209,7 @@
     <Content Include="Content\bootstrap-theme.css.map" />
     <Content Include="Content\esia.cer" />
     <Content Include="esia.cer" />
+    <Content Include="Content\RSA_PROD.cer" />
     <None Include="Scripts\jquery-3.1.1.intellisense.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
